--- a/config/apache2-default-site.conf
+++ b/config/apache2-default-site.conf
@@ -1,4 +1,4 @@
-<VirtualHost 192.168.33.10:80>
+<VirtualHost 192.168.33.20:80>
 	# The ServerName directive sets the request scheme, hostname and port that
 	# the server uses to identify itself. This is used when creating
 	# redirection URLs. In the context of virtual hosts, the ServerName
@@ -6,7 +6,7 @@
 	# match this virtual host. For the default virtual host (this file) this
 	# value is not decisive as it is used as a last resort host regardless.
 	# However, you must set it for any further virtual host explicitly.
-	ServerName carbyne-core.dev
+	ServerName zerosilex.dev
 
 	ServerAdmin webmaster@localhost
 	DocumentRoot /var/www/web
