--- a/config/apache2-default-site.conf
+++ b/config/apache2-default-site.conf
@@ -9,9 +9,11 @@
 	ServerName zerosilex.dev
 
 	ServerAdmin webmaster@localhost
-	DocumentRoot /var/www/web
-	<Directory /var/www/web>
-	    AllowOverride All
+	DocumentRoot /vagrant/web
+	<Directory /vagrant/web>
+		Require all granted
+	#    Order allow,deny
+		AllowOverride All
 	</Directory>
 
 	# Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
