--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
-        "silex/silex": "~1.2"
+        "silex/silex": "~1.2",
+        "doctrine/dbal": "2.2"
     },
     "autoload": {
        "psr-4": {
