Add caching and 304 support.

--- a/config/settings.json
+++ b/config/settings.json
@@ -2,6 +2,7 @@
     "database": {
         "path": "app.db"
     },
+    "cache.lifetime": 300,
     "rot_encode.count": 26,
     "environment": "dev"
 }
